--- a/nft/Cargo.toml
+++ b/nft/Cargo.toml
@@ -10,3 +10,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 near-sdk = "3.1.0"
 near-contract-standards = "3.1.1"
+hex = "0.4.3"
+elliptic-curve = "0.12.2"
+ed25519-dalek = "1.0.1"
+rand = { version = "0.7.0", features = ["std"] }
